--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -5,6 +5,9 @@
   font-variation-settings: "wdth" 100;
 }
 /* shared style */
+.secondary-bg {
+  background: rgb(255, 248, 243);
+}
 .text-primary {
   color: rgb(253, 110, 10);
 }
@@ -20,7 +23,17 @@
   padding: 18px 35px;
   border: none;
 }
+.section-title {
+  font-size: 35px;
+  font-weight: bold;
+  color: rgb(24, 24, 24);
+}
+.section-description {
+  font-size: 18px;
+  color: rgb(117, 117, 117);
+}
 /* header */
+
 .heading {
   background-image: url("../images/developer.png"),
     url("../images/header_bg.png");
@@ -72,4 +85,23 @@ nav ul {
 }
 .banner-profile {
   width: 580px;
+}
+/* main style */
+main {
+  max-width: 1140px;
+  margin: 0 auto;
+}
+/* about */
+.about {
+  border-radius: 10px;
+  padding: 130px 150px;
+  text-align: center;
+  margin-top: 130px;
+}
+.about-items {
+  display: flex;
+  justify-content: space-around;
+}
+.item-description {
+  font-weight: 600;
 }
