--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -23,6 +23,9 @@
   padding: 18px 35px;
   border: none;
 }
+.btn-primary:hover {
+  cursor: pointer;
+}
 .section-title {
   font-size: 35px;
   font-weight: bold;
@@ -31,6 +34,9 @@
 .section-description {
   font-size: 18px;
   color: rgb(117, 117, 117);
+}
+.text-center {
+  text-align: center;
 }
 /* header */
 
@@ -91,12 +97,15 @@ main {
   max-width: 1140px;
   margin: 0 auto;
 }
+main section {
+  margin-top: 130px;
+  margin-bottom: 130px;
+}
 /* about */
 .about {
   border-radius: 10px;
   padding: 130px 150px;
   text-align: center;
-  margin-top: 130px;
 }
 .about-items {
   display: flex;
@@ -104,4 +113,14 @@ main {
 }
 .item-description {
   font-weight: 600;
+}
+/* skill style */
+.skills-container {
+  display: flex;
+  gap: 24px;
+}
+.skill {
+  box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+  border-radius: 5px;
+  padding: 30px;
 }
