images add again

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -174,3 +174,24 @@ main section {
   text-align: center;
   margin-top: 50px;
 }
+/* footer style */
+footer {
+  padding: 130px 200px;
+  display: flex;
+  gap: 100px;
+}
+.footer-column {
+  width: 50%;
+}
+footer input[type="text"],
+footer input[type="email"],
+footer textarea {
+  height: 64px;
+  border-radius: 5px;
+  background-color: white;
+  display: block;
+  width: 80%;
+  padding: 10px 20px;
+  margin-bottom: 24px;
+  border: none;
+}
